--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .NavbarItems {
-    background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73,63,252,1) 100%);
+    background: linear-gradient(90deg, rgb(209, 208, 214) 0%, rgb(142, 141, 146) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
